salesforce_sfdx_QA/main/default/objects/Application_Document_Requirement_Model__c/fields/Application_Task_Model__c.field-meta.xml
<CustomField>
    <fullName>Application_Task_Model__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Task Model</label>
    <referenceTo>Application_Task_Model__c</referenceTo>
    <relationshipLabel>Application Document Requirement Models</relationshipLabel>
    <relationshipName>Application_Document_Requirement_Models</relationshipName>
    <type>Lookup</type>
</CustomField>