salesforce_sfdx_QA/main/default/objects/Application_Document_Requirement_Model__c/fields/Application_Template__c.field-meta.xml
<CustomField>
    <fullName>Application_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Template</label>
    <referenceTo>vlocity_cmt__ApplicationTemplate__c</referenceTo>
    <relationshipLabel>Application Document Requirement Models</relationshipLabel>
    <relationshipName>Application_Document_Requirement_Models</relationshipName>
    <type>Lookup</type>
</CustomField>