salesforce_sfdx_QA/main/default/objects/Application_Document_Requirement_Model__c/fields/Record_Order__c.field-meta.xml
<CustomField>
    <fullName>Record_Order__c</fullName>
    <label>Record Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>